--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     font-size: 16px;
 }
 
+li {
+    list-style-type: none;
+}
+
 .city-input {
     border-color: goldenrod;
     border-width: 2px;
@@ -14,6 +18,7 @@ body {
     border-bottom-right-radius: 15px;
     color: white;
 }
+
 
 .forecast {
     background-color: goldenrod;
